build-tests/tests/fail/macros_invalid_input.stderr
error: the async keyword is missing from the function declaration
 --> $DIR/macros_invalid_input.rs:4:1
  |
4 | fn main_is_not_async() {}
  | ^^

error: the main function cannot accept arguments
 --> $DIR/macros_invalid_input.rs:7:27
  |
7 | async fn main_fn_has_args(_x: u8) {}
  |                           ^^^^^^

error: Unknown attribute foo is specified
 --> $DIR/macros_invalid_input.rs:9:15
  |
9 | #[tokio::main(foo)]
  |               ^^^

error: Must have specified ident
  --> $DIR/macros_invalid_input.rs:12:15
   |
12 | #[tokio::main(multi_thread::bar)]
   |               ^^^^^^^^^^^^^^^^^

error: the async keyword is missing from the function declaration
  --> $DIR/macros_invalid_input.rs:16:1
   |
16 | fn test_is_not_async() {}
   | ^^

error: the test function cannot accept arguments
  --> $DIR/macros_invalid_input.rs:19:27
   |
19 | async fn test_fn_has_args(_x: u8) {}
   |                           ^^^^^^

error: unexpected token
  --> $DIR/macros_invalid_input.rs:21:15
   |
21 | #[tokio::test(foo)]
   |               ^^^

error: second test attribute is supplied
  --> $DIR/macros_invalid_input.rs:25:1
   |
25 | #[test]
   | ^^^^^^^
